<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@drawable/success_background">

    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <!-- Exit Button - Top Left -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="start">

            <Button
                android:id="@+id/btnExit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/holo_red_light"
                android:paddingHorizontal="30dp"
                android:text="Exit"
                android:textColor="@android:color/white"
                android:textSize="22sp"/>
        </LinearLayout>

        <!-- Title -->
        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_input_info"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@android:color/holo_blue_light"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="2dp"/>

        <!-- Gender -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender_label"
            android:textColor="@android:color/holo_blue_bright"
            android:textSize="26sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/rgGender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rbMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_marginEnd="40dp"
                android:text="@string/male" />

            <RadioButton
                android:id="@+id/rbFemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/female" />
        </RadioGroup>

        <!-- Age -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/age_label"
            android:textStyle="bold"
            android:textSize="26sp"
            android:textColor="@android:color/holo_blue_bright"
            android:layout_marginTop="10dp"/>

        <RadioGroup
            android:id="@+id/rgAge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/rbAge1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/age_18_25" />

            <RadioButton
                android:id="@+id/rbAge2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/age_26_35" />

            <RadioButton
                android:id="@+id/rbAge3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/age_36_45" />

            <RadioButton
                android:id="@+id/rbAge4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/age_46_60" />

            <RadioButton
                android:id="@+id/rbAge5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/age_60_plus" />
        </RadioGroup>

        <!-- Known Eye Issues -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eye_label"
            android:textStyle="bold"
            android:textSize="26sp"
            android:textColor="@android:color/holo_blue_bright"
            android:layout_marginTop="10dp"/>

        <RadioGroup
            android:id="@+id/rgEye"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rbGlasses"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_marginEnd="20dp"
                android:text="@string/has_glasses" />

            <RadioButton
                android:id="@+id/rbNoGlasses"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_marginStart="60dp"
                android:text="@string/no_glasses" />
        </RadioGroup>

        <!-- Known Attention Deficit -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_label"
            android:textStyle="bold"
            android:textSize="26sp"
            android:textColor="@android:color/holo_blue_bright"
            android:layout_marginTop="10dp"/>

        <RadioGroup
            android:id="@+id/rgAttentionDeficit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rbAddYes"
                android:layout_width="81dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:text="@string/yes"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/rbAddNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/no" />
        </RadioGroup>


        <!-- Next Button -->
        <Button
            android:id="@+id/btnNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="40dp"
            android:backgroundTint="@android:color/holo_blue_light"
            android:paddingHorizontal="40dp"
            android:text="@string/next"
            android:textColor="@android:color/white"
            android:textSize="22sp" />

    </LinearLayout>
</ScrollView>